[gd_scene load_steps=3 format=2]

[ext_resource path="res://Options/Options.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Main Menu.tres" type="FontFile" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
offset_right = 1027.0
offset_bottom = 602.0

[node name="ScrollContainerP2" type="ScrollContainer" parent="Panel"]
offset_left = 632.0
offset_top = 127.0
offset_right = 843.0
offset_bottom = 295.0

[node name="VBoxContainerP2" type="VBoxContainer" parent="Panel/ScrollContainerP2"]
offset_right = 56.0
offset_bottom = 116.0

[node name="HBoxCont_P2move_right" type="HBoxContainer" parent="Panel/ScrollContainerP2/VBoxContainerP2"]
offset_right = 56.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_right"]
offset_top = 3.0
offset_right = 32.0
offset_bottom = 17.0
text = "Right"

[node name="Button" type="Button" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_right"]
offset_left = 36.0
offset_right = 48.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P2move_left" type="HBoxContainer" parent="Panel/ScrollContainerP2/VBoxContainerP2"]
offset_top = 24.0
offset_right = 56.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_left"]
offset_top = 3.0
offset_right = 24.0
offset_bottom = 17.0
text = "Left"

[node name="Button" type="Button" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_left"]
offset_left = 28.0
offset_right = 40.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P2_Down" type="HBoxContainer" parent="Panel/ScrollContainerP2/VBoxContainerP2"]
offset_top = 48.0
offset_right = 56.0
offset_bottom = 68.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Down"]
offset_top = 3.0
offset_right = 36.0
offset_bottom = 17.0
text = "Down"

[node name="Button" type="Button" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Down"]
offset_left = 40.0
offset_right = 52.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P2_Jump" type="HBoxContainer" parent="Panel/ScrollContainerP2/VBoxContainerP2"]
offset_top = 72.0
offset_right = 56.0
offset_bottom = 92.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Jump"]
offset_top = 3.0
offset_right = 32.0
offset_bottom = 17.0
text = "Jump"

[node name="Button" type="Button" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Jump"]
offset_left = 36.0
offset_right = 48.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P2_Attack" type="HBoxContainer" parent="Panel/ScrollContainerP2/VBoxContainerP2"]
offset_top = 96.0
offset_right = 56.0
offset_bottom = 116.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Attack"]
offset_top = 3.0
offset_right = 40.0
offset_bottom = 17.0
text = "Attack"

[node name="Button" type="Button" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Attack"]
offset_left = 44.0
offset_right = 56.0
offset_bottom = 20.0
toggle_mode = true

[node name="ScrollContainerP1" type="ScrollContainer" parent="Panel"]
offset_left = 269.0
offset_top = 123.0
offset_right = 500.0
offset_bottom = 311.0

[node name="VBoxContainerP1" type="VBoxContainer" parent="Panel/ScrollContainerP1"]
offset_right = 56.0
offset_bottom = 116.0

[node name="HBoxCont_P1move_right" type="HBoxContainer" parent="Panel/ScrollContainerP1/VBoxContainerP1"]
offset_right = 56.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_right"]
offset_top = 3.0
offset_right = 32.0
offset_bottom = 17.0
text = "Right"

[node name="Button" type="Button" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_right"]
offset_left = 36.0
offset_right = 48.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P1move_left" type="HBoxContainer" parent="Panel/ScrollContainerP1/VBoxContainerP1"]
offset_top = 24.0
offset_right = 56.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_left"]
offset_top = 3.0
offset_right = 24.0
offset_bottom = 17.0
text = "Left"

[node name="Button" type="Button" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_left"]
offset_left = 28.0
offset_right = 40.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P1_Down" type="HBoxContainer" parent="Panel/ScrollContainerP1/VBoxContainerP1"]
offset_top = 48.0
offset_right = 56.0
offset_bottom = 68.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Down"]
offset_top = 3.0
offset_right = 36.0
offset_bottom = 17.0
text = "Down"

[node name="Button" type="Button" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Down"]
offset_left = 40.0
offset_right = 52.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P1_Jump" type="HBoxContainer" parent="Panel/ScrollContainerP1/VBoxContainerP1"]
offset_top = 72.0
offset_right = 56.0
offset_bottom = 92.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Jump"]
offset_top = 3.0
offset_right = 32.0
offset_bottom = 17.0
text = "Jump"

[node name="Button" type="Button" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Jump"]
offset_left = 36.0
offset_right = 48.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P1_Attack" type="HBoxContainer" parent="Panel/ScrollContainerP1/VBoxContainerP1"]
offset_top = 96.0
offset_right = 56.0
offset_bottom = 116.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Attack"]
offset_top = 3.0
offset_right = 40.0
offset_bottom = 17.0
text = "Attack"

[node name="Button" type="Button" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Attack"]
offset_left = 44.0
offset_right = 56.0
offset_bottom = 20.0
toggle_mode = true

[node name="Label" type="Label" parent="Panel"]
offset_left = 293.0
offset_top = 78.0
offset_right = 344.0
offset_bottom = 92.0
text = "Player 1"

[node name="Label2" type="Label" parent="Panel"]
offset_left = 675.0
offset_top = 81.0
offset_right = 726.0
offset_bottom = 95.0
text = "Player 2"

[node name="Main_menu" type="Button" parent="Panel"]
offset_left = 423.0
offset_top = 533.0
offset_right = 623.0
offset_bottom = 575.0
theme_override_fonts/font = ExtResource( 2 )
text = "Main menu"
icon_alignment = 1

[connection signal="pressed" from="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_right/Button" to="." method="b_change_key_P2move_right"]
[connection signal="pressed" from="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_left/Button" to="." method="b_change_key_P2move_left"]
[connection signal="pressed" from="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Down/Button" to="." method="b_change_key_P2_Down"]
[connection signal="pressed" from="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Jump/Button" to="." method="b_change_key_P2_Jump"]
[connection signal="pressed" from="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Attack/Button" to="." method="b_change_key_P2_Attack"]
[connection signal="pressed" from="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_right/Button" to="." method="b_change_key_P1move_right"]
[connection signal="pressed" from="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_left/Button" to="." method="b_change_key_P1move_left"]
[connection signal="pressed" from="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Down/Button" to="." method="b_change_key_P1_Down"]
[connection signal="pressed" from="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Jump/Button" to="." method="b_change_key_P1_Jump"]
[connection signal="pressed" from="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Attack/Button" to="." method="b_change_key_P1_Attack"]
[connection signal="pressed" from="Panel/Main_menu" to="." method="_on_main_menu_pressed"]
